[gd_scene load_steps=7 format=3 uid="uid://bfm5hl83uvbuu"]

[ext_resource type="Theme" uid="uid://bta37afsxmgt5" path="res://assets/themes/default_theme.tres" id="1_7w7rl"]
[ext_resource type="Script" path="res://scripts/ui/menu.gd" id="2_wedc3"]
[ext_resource type="PackedScene" uid="uid://cwqxqdu8euawi" path="res://scenes/ui/settings.tscn" id="3_c2n5p"]
[ext_resource type="Texture2D" uid="uid://bl2trjj6x1pyf" path="res://assets/sprites/space background.png" id="3_w6y0u"]
[ext_resource type="PackedScene" uid="uid://becfukrllb44n" path="res://scenes/components/button_component.tscn" id="4_cx0sj"]
[ext_resource type="PackedScene" uid="uid://cg0s6ehbns1ai" path="res://scenes/ui/statistics.tscn" id="6_ntye7"]

[node name="Menu" type="Control" node_paths=PackedStringArray("main", "settings", "statistics", "high_score_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7w7rl")
script = ExtResource("2_wedc3")
main = NodePath("Main")
settings = NodePath("Settings")
statistics = NodePath("Statistics")
high_score_label = NodePath("Main/MarginContainer/HighScoreLabel")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_w6y0u")

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -62.0
offset_bottom = 17.0
grow_horizontal = 0

[node name="HighScoreLabel" type="Label" parent="Main/MarginContainer"]
layout_mode = 2
text = "High Score: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -45.0
offset_right = 42.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Universo Shootin'"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Main/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Main/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Main/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Menu"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Main/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="ButtonComponent" parent="Main/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StartButton" instance=ExtResource("4_cx0sj")]

[node name="SettingsButton" type="Button" parent="Main/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ButtonComponent" parent="Main/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" instance=ExtResource("4_cx0sj")]

[node name="StatisticsButton" type="Button" parent="Main/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Statistics"

[node name="ButtonComponent" parent="Main/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StatisticsButton" instance=ExtResource("4_cx0sj")]

[node name="LeaderboardButton" type="Button" parent="Main/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Leaderboard"

[node name="ButtonComponent" parent="Main/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/LeaderboardButton" instance=ExtResource("4_cx0sj")]

[node name="Settings" parent="." node_paths=PackedStringArray("target") instance=ExtResource("3_c2n5p")]
visible = false
layout_mode = 1
target = NodePath("..")

[node name="Statistics" parent="." node_paths=PackedStringArray("target") instance=ExtResource("6_ntye7")]
visible = false
layout_mode = 1
target = NodePath("..")

[connection signal="pressed" from="Main/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StatisticsButton" to="." method="_on_statistics_button_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
